website/assets/styles/style.scss
///
/// Variables
/// 

$bg-color: black;
$c-hue: 110;
$font-color: hsl($c-hue, 100%, 59%);
$card-color: hsl($c-hue, 100%, 8%);
$border-style:  3px solid $font-color;


///
/// All text fields
/// 

p, h1, h2, h3, h4, h5, h6, a, ul, ol, li{
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color: $font-color;
    text-shadow: 0px 0px 6px 3px $font-color;;
    margin: 0;
}
.glitchText, h1, h2, h3{
      animation: textShadow 1.6s infinite;
}


/// 
/// Global colors
/// 

body{
    background-color: $bg-color;
}

.cardBox {
  background-color: $card-color;
}

.glow{
    box-shadow: 0px 0px 9px 0px $font-color;
}


/// 
/// Reactivity
/// 

.flex-column{
  display: flex;
  flex-direction: column;
}
.flex-row{
  display: flex;
  flex-direction: row;
}

/// Screen sizes
/// max = below that vlue
/// min = above that value
@media screen and (min-width: 1100px){
  #docsDiv {
    margin-left: auto;
    margin-right: auto;
  }
}
@media screen and (max-width: 1100px)
{
  #sideBarLeft{
    display: none;
  }
  #pageBody{
    display: flex;
    flex-direction: column;
  }
  #sideBarRight{
    width: 60vw
  }
}



@media screen and (min-width: 900px) // Mobile
{
  #topRow{
    display: flex;
    flex-direction: row;
  }

  #docsDiv {
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (max-width: 900px)
{
  #topRow{
    display: flex;
    flex-direction: column;
  }
}

///
/// Global positionings
/// 

/// Classes
.outerMargin{
    margin: 1em;
} 
.cardBox{
    padding: 0.5em;
}
.gifCarrouselImage{
    margin: 0.5em;
}
.blogImg{
    margin-top: 3em;
}

/// Main pages

#mainBody{
  width: 60vw;
}
#jermaHidden{
  position: fixed;
}
#sideBarRight{
    justify-content: center;
}
#aboutMe{
  column-gap: 1em;
}

/// Blog
#mainBlogBody{
    margin-left: 1em;
    row-gap: 1em;
}
#blogBody{
    justify-content: center;
}
#blogHeaderTitle{
    font-size: 1.5em;
    margin-bottom: 0.5em;
}
#blogText{
  overflow: hidden;
  padding: 1em;
}


///
/// Global sizes
/// 

/// Classes
.cardBox{
    border-radius: 3px; 
}
.rounded{
    border-radius: 10px; 
}
.newlineOnEnter{
  white-space: pre-line;
}
.largerPText{
  font-size: 1.1rem;
}
.newlineOnEnter>img{
  width: 80%;
}
.blogImg{
    width: 60%;
}

///Background
#background{
  height: 100vh;
}
#quoteAndStoneDiv{
  max-width: 30%;
}

/// Main pages
footer{
  margin: auto;
}
#body{
    display: flex;
    justify-content: center;
}
#sideBarLeft{
    width: 20%;
    max-width: 20em;
    min-width: 15em;
}
#pageBody{
    margin-bottom: 0%;
}
#jermaHidden, #jermaPhoto{
  display: inline;
  width: 100vw; 
  height: 100vh;
}
#docsDiv, #docsThumbnail{
  max-width: 18em;
  max-height: 180px;
}
#quoteDiv{
  margin-bottom: 0;
}
#gifCarrousel{
    height: 20em;
}
#gifCarrouselContents{
    display: flex;
    overflow: auto;
}

/// Blog styling
#mainBlogBody{
    width: 80%;
}
#blogSideBarLeft{
    width: 8%;
}


///
/// Misc
/// 

// Don't glitch the noGlitch hoverable elements
a[href]:hover:not(.noGlitch){
  animation: textShadowBig 0.2s infinite;
}

.clickable{
    cursor: pointer;
}
.cardBox{
    border: $border-style;
}


///
/// Animations
///

//Crt lines on the screen
.crt::after {
    content: " ";
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background: rgba(18, 16, 16, 0.1);
    opacity: 0;
    z-index: 2;
    pointer-events: none;
    
  }
.crt::before {
    content: " ";
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
    z-index: 2;
    background-size: 100% 2px, 3px 100%;
    pointer-events: none;
  }
.crt{
    width: 100%;
    height: 100%;
    position: fixed;
    pointer-events: none;

  }
@keyframes textShadow {
    0% {
      text-shadow: 0.4389924193300864px 0 1px rgba(0,30,255,0.5), -0.4389924193300864px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    5% {
      text-shadow: 2.7928974010788217px 0 1px rgba(0,30,255,0.5), -2.7928974010788217px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    10% {
      text-shadow: 0.02956275843481219px 0 1px rgba(0,30,255,0.5), -0.02956275843481219px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    15% {
      text-shadow: 0.40218538552878136px 0 1px rgba(0,30,255,0.5), -0.40218538552878136px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    20% {
      text-shadow: 3.4794037899852017px 0 1px rgba(0,30,255,0.5), -3.4794037899852017px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    25% {
      text-shadow: 1.6125630401149584px 0 1px rgba(0,30,255,0.5), -1.6125630401149584px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    30% {
      text-shadow: 0.7015590085143956px 0 1px rgba(0,30,255,0.5), -0.7015590085143956px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    35% {
      text-shadow: 3.896914047650351px 0 1px rgba(0,30,255,0.5), -3.896914047650351px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    40% {
      text-shadow: 3.870905614848819px 0 1px rgba(0,30,255,0.5), -3.870905614848819px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    45% {
      text-shadow: 2.231056963361899px 0 1px rgba(0,30,255,0.5), -2.231056963361899px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    50% {
      text-shadow: 0.08084290417898504px 0 1px rgba(0,30,255,0.5), -0.08084290417898504px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    55% {
      text-shadow: 2.3758461067427543px 0 1px rgba(0,30,255,0.5), -2.3758461067427543px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    60% {
      text-shadow: 2.202193051050636px 0 1px rgba(0,30,255,0.5), -2.202193051050636px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    65% {
      text-shadow: 2.8638780614874975px 0 1px rgba(0,30,255,0.5), -2.8638780614874975px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    70% {
      text-shadow: 0.48874025155497314px 0 1px rgba(0,30,255,0.5), -0.48874025155497314px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    75% {
      text-shadow: 1.8948491305757957px 0 1px rgba(0,30,255,0.5), -1.8948491305757957px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    80% {
      text-shadow: 0.0833037308038857px 0 1px rgba(0,30,255,0.5), -0.0833037308038857px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    85% {
      text-shadow: 0.09769827255241735px 0 1px rgba(0,30,255,0.5), -0.09769827255241735px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    90% {
      text-shadow: 3.443339761481782px 0 1px rgba(0,30,255,0.5), -3.443339761481782px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    95% {
      text-shadow: 2.1841838852799786px 0 1px rgba(0,30,255,0.5), -2.1841838852799786px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    100% {
      text-shadow: 2.6208764473832513px 0 1px rgba(0,30,255,0.5), -2.6208764473832513px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
  }
@keyframes textShadowBig {
    0% {
      text-shadow: 0.4389924193300864px 10px 1px rgba(0,30,255,0.5), -0.870905614848819px 15px 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    20% {
      text-shadow: 0.4794037899852017px 5px 1px rgba(0,30,255,0.5), -0.4794037899852017px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    40% {
      text-shadow: -0.870905614848819px 15px 1px rgba(0,30,255,0.5), 0.08084290417898504px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    45% {
      text-shadow: 0.231056963361899px 10px 1px rgba(0,30,255,0.5), -0.231056963361899px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    50% {
      text-shadow: 0.08084290417898504px -5px 1px rgba(0,30,255,0.5), 0.08084290417898504px -5px 1px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    70% {
      text-shadow: 0.48874025155497314px 0 1px rgba(0,30,255,0.5), -0.48874025155497314px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    75% {
      text-shadow: -0.8948491305757957px 0 1px rgba(0,30,255,0.5), -0.8948491305757957px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    90% {
      text-shadow: -0.443339761481782px 10 1px rgba(0,30,255,0.5), 0.443339761481782px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    95% {
      text-shadow: 0.1841838852799786px 0 1px rgba(0,30,255,0.5), -0.1841838852799786px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
    100% {
      text-shadow: 0.6208764473832513px -10 1px rgba(0,30,255,0.5), -0.6208764473832513px 0 1px rgba(255,0,80,0.3), 0 0 3px;
    }
  }

